--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with Creative Studio landing page.">
     <meta name="author" content="Devcrud">
-    <title>DIGITAL WAVE IT SOLUTION PVT LIMITED</title>
+    <title>DIGITAL WAVE IT SOLUTION PVT L</title>
 
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
