--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with Creative Studio landing page.">
     <meta name="author" content="Devcrud">
-    <title>DIGITAL WAVE IT SOLUTION PVT L</title>
+    <title>DIGITAL WAVE IT SOLUTION PVT LIMITED</title>
 
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -63,7 +63,7 @@
     <header class="header">
         <div class="overlay">
             <h6 class="subtitle">Small Team With Big Ideas</h6>
-            <h1 class="title">DIGITAL WAVE IT SOLUTION</h1>
+            <h1 class="title">HELLO</h1>
             <div class="buttons text-center">
                 <a href="#service" class="btn btn-primary rounded w-lg btn-lg my-1">Our Service</a>
                 <a href="#contact" class="btn btn-outline-light rounded w-lg btn-lg my-1">Contact Us</a>
