--- a/public_html/index.html
+++ b/public_html/index.html
@@ -63,7 +63,7 @@
     <header class="header">
         <div class="overlay">
             <h6 class="subtitle">Small Team With Big Ideas</h6>
-            <h1 class="title">DIGITAL WAVE IT SOLUTION</h1>
+            <h1 class="title"><center>DIGITAL WAVE IT SOLUTION</center></h1>
             <div class="buttons text-center">
                 <a href="#service" class="btn btn-primary rounded w-lg btn-lg my-1">Our Service</a>
                 <a href="#contact" class="btn btn-outline-light rounded w-lg btn-lg my-1">Contact Us</a>
@@ -90,7 +90,7 @@
             <p>we also have different different teachnologies for app development- android , ios and hybrid as well as with all the frame work and languages.</p>
         </div>
         <div class="box-item">
-            <i class="ti-dashbord"></i>
+            <i class="ti-mobile"></i>
             <h6 class="box-title">CRM DEVELOPMENT</h6>
             <p>we also  Create CRMS for all type orgenations, with best UI desigen</p>
         </div>
