--- a/public_html/index.html
+++ b/public_html/index.html
@@ -339,7 +339,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4">
                     <div class="card text-center mb-4">
-                        <img class="card-img-top inset" src="assets/imgs/avatar-4.jpg">
+                        <img class="card-img-top inset" src="assets/imgs/avatar-4.jpeg">
                         <div class="card-body">
                             <h6 class="small text-primary font-weight-bold">Data scientest</h6>
                             <h5 class="card-title">Nitesh Kumar Saini</h5>
