personal website linked

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -298,7 +298,7 @@
                             <div class="socials">
                                 <a href="javascript:void(0)"><i class="ti-facebook"></i> </a>
                                 <a href="https://instagram.com/kt_crown.18?igshid=MzRlODBiNWFlZA=="><i class="ti-instagram"></i></a>
-                                <a href="https://ktcrown.s3.ap-south-1.amazonaws.com/rp/index.html" class="link"><i class="ti-google"></i></a>
+                                <a href="https://ktperson.s3.ap-south-1.amazonaws.com/rp/index.html" class="link"><i class="ti-google"></i></a>
                                 <a href="https://x.com/YogeshK85249802?s=09"><i class="ti-twitter"></i></a>
                             </div>
                         </div>
