--- a/public_html/index.html
+++ b/public_html/index.html
@@ -575,7 +575,7 @@
                 <div class="form">
                     <h6 class="section-subtitle">Available 24/7</h6>
                     <h6 class="section-title mb-4">Get In Touch</h6>
-                    <form>
+                    <form method="post" action="submit_form.php">
                         <div class="form-group">
                             <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
                         </div>
