--- a/public_html/index.html
+++ b/public_html/index.html
@@ -604,7 +604,7 @@
                         <li class="list-body">
                             <a href="#" class="logo">
                                 <img src="assets/imgs/logo.png" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, Creative studio Landing page">
-                                <h6>DIGITAL WAVE IT SOLUTION</h6>
+                                <h6>nishu naruka</h6>
                             </a>
                             <p>DIGITAL WAVE IT SOLUTION , provides you best example of work. we bring your dreams true in digital world. if you have any idea ,bring it to us and we will help to complete it. we have extra ordinery team to work on different different teachnologies.</p> 
                             <p class="mt-3">
